# westernflyer_cruise_ctd

./: .gitignore  AGENTS.md  LICENSE  README.md  ctd_holoviews.py  eos80_processing.py  main.py  pyproject.toml  sbe19plus_ingestion.py
cruises/baja2025/: calibration.csv  calibration.xmlcon  config.toml  stations.csv
cruises/baja2025/hex/: 20250416_cast1.hex  20250416_cast2.hex  20250417.hex  20250418_cast1.hex  20250418_cast2.hex  20250419_cast1.hex  20250419_cast2.hex  20250420_cast1.hex  20250420_cast2.hex  20250421.hex  20250423.hex  20250424_cast1.hex  20250424_cast2.hex  20250429.hex  20250430_cast1.hex  20250430_cast2.hex  20250502_cast1.hex  20250502_cast2.hex  20250504_cast1.hex  20250504_cast2.hex  20250504_cast3.hex  20250504_cast4.hex  20250504_cast5.hex  20250506_cast1.hex  20250506_cast2.hex  20250506_cast3.hex
scripts/linux_mac/: ctd_build.sh  ctd_build_baja2025.sh  ctd_dashboard.sh
scripts/windows/: ctd_build.bat  ctd_build_baja2025.bat  ctd_dashboard.bat
