[project]
name = "wf-cruise-ctd"
version = "1.0.0"
description = "Western Flyer CTD processing pipeline — SBE 19plus V2 raw hex to EOS-80 DuckDB"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Joe Carlisle", email = "joeacarlisle@gmail.com"},
]

# Core runtime dependencies.
# seabirdscientific is available on PyPI (supports Python 3.9–3.12).
dependencies = [
    "seabirdscientific>=2.7.8",
    "duckdb>=1.5.0",
    "gsw>=3.6.0",
    "numpy>=2.0.0",
    "pandas>=3.0.0",
    "scipy>=1.10.0",
    # Visualization & geospatial (required by ctd_holoviews.py)
    "bokeh>=3.3.0",
    "cartopy>=0.22.0",
    "geoviews>=1.10.0",
    "holoviews>=1.17.0",
    "hvplot>=0.9.0",
    "panel>=1.3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# The pipeline modules live at the project root (no src/ layout).
# Listing them here makes them importable after `pip install -e .`
[tool.setuptools]
py-modules = [
    "main",
    "eos80_processing",
    "sbe19plus_ingestion",
    "ctd_holoviews",
]
